fix cost-matrix display on mobile

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -33,3 +33,7 @@
     text-transform: none;
     font-family: "Open Sans";
 }
+
+#priceChart {
+    min-height: 300px;
+}
